updated to JS 4.11

--- a/index.html
+++ b/index.html
@@ -6,26 +6,20 @@
 		<title>Dot Density</title>
 
 		<!--put your external stylesheet links here-->
-		<link rel="stylesheet" href="https://js.arcgis.com/3.27/esri/css/esri.css">
-		<script src="https://js.arcgis.com/3.27/"></script>
+		<link rel="stylesheet" href="https://js.arcgis.com/4.11/esri/themes/dark/main.css">
+		<script src="https://js.arcgis.com/4.11/"></script>
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/jquery-ui.css">
 		<!--[if IE<9]>
 			<link rel="stylesheet" href="css/style.ie.css">
 		<![endif]-->
 	</head>
 
-	<body class="claro">
+	<body>
 		<!--put your initial page content here-->
 			
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
-		<div id="map">
-			<div id="HomeButton"></div>
-		</div>
-		<div id="info">
-			<div id="legend"></div>
-		</div>
+		<div id="viewDiv"></div>
 		<!--put your external script links here-->
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
