added functionality to the legend

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 		<div id="viewDiv"></div>
+		<div id="controlDiv" class="esri-widget">
+			<div id="legendDiv"></div>
+		</div>
 		<!--put your external script links here-->
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
